# genesys-voice-qa-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/genesys_voice_qa/: __init__.py  __main__.py  analyzer.py  bootstrap.py  genesys.py  genesys_auth.py  genesys_listener.py  models.py  notifications.py
src/genesys_voice_qa/llm/: __init__.py  azure_openai_completion.py  completion_client.py  in_house_gateway_completion.py
